--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,6 @@
   -webkit-text-size-adjust: 100%;
 }
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
 a {
   font-weight: 500;
   color: #646cff;
@@ -35,6 +28,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
 }
